--- a/linaro/configs/arndale_octa.conf
+++ b/linaro/configs/arndale_octa.conf
@@ -11,7 +11,7 @@ CONFIG_ARM_ATAG_DTB_COMPAT=y
 CONFIG_CMDLINE="root=/dev/ram0 rw ramdisk=8192 initrd=0x41000000,8M console=ttySAC3,115200 init=/linuxrc mem=256M"
 CONFIG_VFP=y
 CONFIG_NEON=y
-CONFIG_PM_RUNTIME=y
+CONFIG_PM_RUNTIME=n
 CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=128
 CONFIG_SCSI=y
